# amboss-screenshot-scraper

./: .gitignore  ARCHITECTURE.md  Dockerfile  FAST_PROCESSOR_README.md  README.md  SEARCH_EXTRACTOR_README.md  TEST_LOG.md  add_url.py  amboss_all_articles_links.txt  amboss_scraper.db  debug_content_area.py  debug_discovery.py  debug_expansion.py  debug_page_content.py  debug_popups.py  debug_stats.json  direct_screenshot.py  env.example  extract_amboss_urls.py  fast_amboss_processor.py  pyproject.toml  quick_fix.py  quick_test.py  simple_slug_extractor.py  simple_test.py  slug_list.txt  test_dimensions.py  test_expansion.py  test_popup_handling.py  test_slug_extraction.py
amboss/: __init__.py  auth.py  cli.py  config.py  db.py  discover.py  expander.py  fast_processor.py  search_extractor.py  shooter.py  tasks.py  validator.py
docs/: IMPLEMENTATION_SUMMARY.md  img_to_md_promt.md
tests/: __init__.py  test_expander.py  test_shooter.py  test_validator.py
