[tool.poetry]
name = "amboss-scraper"
version = "0.1.0"
description = "AMBOSS screenshot scraper with intelligent content expansion and validation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "amboss"}]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.45.0"
aiohttp = "^3.9.0"
tenacity = "^8.2.0"
pydantic = {extras = ["settings"], version = "^2.5.0"}
aiosqlite = "^0.19.0"
structlog = "^23.2.0"
asyncio-throttle = "^1.0.2"
pillow = "^10.1.0"
typer = {extras = ["all"], version = "^0.9.0"}
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
amboss = "amboss.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 